# doc-it

./: .gitignore  LICENSE
backend/: .gitignore  Cargo.toml
backend/migrations/: 001_init.sql  002_folders.sql  003_document_folders.sql  004_inbox_to_root.sql
backend/src/: app_state.rs  main.rs
backend/src/db/: documents.rs  folders.rs  migrations.rs  mod.rs
backend/src/models/: api.rs  db.rs  mod.rs  ws.rs
backend/src/realtime/: rooms.rs
backend/src/routes/: documents.rs  folders.rs  mod.rs  websocket.rs
docs/: mvp-spec.md  repo-review-2026-03-18.md  yjs-authoritative-storage-plan.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: types.ts
frontend/src/lib/api/: client.ts  documents.ts  folders.ts
frontend/src/lib/components/: DocItLogo.svelte  DocumentList.svelte  DocumentSearchWorkspace.svelte  EditorShell.svelte  FolderMoveMenu.svelte  FolderPathBadge.svelte  PresenceBar.svelte  ProfileSettingsMenu.svelte  WorkspaceShell.svelte
frontend/src/lib/editor/: markdown.ts  tiptap.ts
frontend/src/lib/folders/: operations.ts  path.ts
frontend/src/lib/realtime/: client.ts
frontend/src/lib/search/: documents.ts
frontend/src/lib/stores/: session.ts  theme.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/d/[id]/: +page.svelte  +page.ts
frontend/src/routes/explore/: +page.svelte
frontend/src/routes/new/: +page.svelte
frontend/src/routes/search/: +page.svelte
